bin/kube/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: asteroid-service
spec:
  selector:
    app: asteroid
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
