bin/kube/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: asteroid-ingress
spec:
  rules:
  - host: asteroid.maxc.in
    http:
      paths:
      - backend:
          serviceName: asteroid-service
          servicePort: 80
